// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`webpack configs > sets up the default config with default settings 1`] = `
"{
  "context": "<PROJECT_ROOT>/project/app",
  "experiments": {},
  "infrastructureLogging": {
    "level": "warn"
  },
  "entry": {
    "index": [
      "<PROJECT_ROOT>/node_modules/react-app-polyfill/stable.js",
      "<PROJECT_ROOT>/node_modules/navigator.sendbeacon/dist/navigator.sendbeacon.cjs.js",
      "<PROJECT_ROOT>/project/app/index.js"
    ]
  },
  "output": {
    "path": "<PROJECT_ROOT>/build",
    "filename": "[name].js",
    "chunkFilename": "[name].chunk.js"
  },
  "devtool": "source-map",
  "resolve": {
    "modules": [
      "<PROJECT_ROOT>/project/app",
      "node_modules",
      "<PROJECT_ROOT>/node_modules",
      "<PROJECT_ROOT>/packages/workflow/node_modules"
    ],
    "symlinks": true,
    "extensions": [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
      ".json",
      ".css",
      ".scss"
    ],
    "fallback": {
      "path": "<PROJECT_ROOT>/node_modules/path-browserify/index.js"
    },
    "plugins": [
      {
        "source": "described-resolve",
        "target": "resolve",
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx"
        ],
        "referenceMatchMap": {},
        "log": {},
        "baseUrl": "./example/",
        "absoluteBaseUrl": "<PROJECT_ROOT>/example"
      }
    ]
  },
  "resolveLoader": {
    "modules": [
      "<PROJECT_ROOT>/node_modules",
      "<PROJECT_ROOT>/packages/workflow/node_modules"
    ],
    "symlinks": true
  },
  "plugins": [
    {
      "definitions": {
        "__DEV__": false,
        "__TEST__": true,
        "__PROD__": false,
        "__STAGING__": false,
        "process.env.NODE_ENV": "\\"test\\""
      }
    },
    {
      "options": {
        "banner": "APP_VERSION=\\"N/A\\";",
        "test": {},
        "raw": true,
        "entryOnly": true
      }
    },
    {
      "options": {
        "banner": "vN/A - 2023-03-28T16:07:07.909Z"
      }
    },
    {
      "userOptions": {
        "template": "../../packages/workflow/public/index.html",
        "favicon": "../../packages/workflow/public/favicon.ico",
        "title": "Availity"
      },
      "version": 5,
      "options": {
        "template": "../../packages/workflow/public/index.html",
        "templateContent": false,
        "filename": "index.html",
        "publicPath": "auto",
        "hash": false,
        "inject": "head",
        "scriptLoading": "defer",
        "compile": true,
        "favicon": "../../packages/workflow/public/favicon.ico",
        "minify": "auto",
        "cache": true,
        "showErrors": true,
        "chunks": "all",
        "excludeChunks": [],
        "chunksSortMode": "auto",
        "meta": {},
        "base": false,
        "title": "Availity",
        "xhtml": false
      }
    },
    {
      "options": {
        "resourceRegExp": {},
        "contextRegExp": {}
      }
    },
    {
      "options": {},
      "logger": {},
      "pathCache": {},
      "fsOperations": 0,
      "primed": false
    },
    {
      "options": {
        "verbose": true,
        "showHelp": true,
        "emitError": false,
        "strict": true
      }
    },
    {
      "key": "ESLintWebpackPlugin",
      "options": {
        "cache": true,
        "cacheLocation": "<PROJECT_ROOT>/node_modules/.cache/.eslintcache",
        "extensions": [
          "js",
          "jsx",
          "ts",
          "tsx",
          "mjs"
        ],
        "emitError": true,
        "emitWarning": true,
        "failOnError": true,
        "resourceQueryExclude": []
      }
    },
    {
      "options": {
        "exclude": {},
        "include": {},
        "overlay": {
          "entry": "<PROJECT_ROOT>/node_modules/@pmmmwh/react-refresh-webpack-plugin/client/ErrorOverlayEntry.js",
          "module": "<PROJECT_ROOT>/node_modules/@pmmmwh/react-refresh-webpack-plugin/overlay/index.js",
          "sockIntegration": "wds"
        }
      }
    },
    {
      "options": {
        "contentImage": "<PROJECT_ROOT>/packages/workflow/public/availity.png",
        "excludeWarnings": true
      },
      "lastBuildSucceeded": false,
      "isFirstBuild": true
    }
  ],
  "mode": "development",
  "target": "browserslist: last 1 chrome version, last 1 firefox version, last 1 safari version",
  "stats": "minimal",
  "module": {
    "rules": [
      {
        "test": {},
        "use": [
          {
            "loader": "imports-loader",
            "options": {
              "type": "commonjs",
              "imports": [
                "single process/browser process"
              ]
            }
          }
        ]
      },
      {
        "test": {},
        "include": [
          "<PROJECT_ROOT>/project/app",
          {}
        ],
        "use": [
          {
            "loader": "esbuild-loader",
            "options": {
              "loader": "tsx",
              "target": "es2015"
            }
          }
        ]
      },
      {
        "test": {},
        "resolve": {
          "fullySpecified": false
        }
      },
      {
        "test": {},
        "use": [
          "style-loader",
          {
            "loader": "css-loader",
            "options": {
              "sourceMap": true,
              "importLoaders": 1
            }
          },
          {
            "loader": "postcss-loader",
            "options": {
              "sourceMap": true,
              "postcssOptions": {
                "plugins": [
                  {
                    "postcssPlugin": "postcss-focus"
                  },
                  {
                    "postcssPlugin": "postcss-flexbugs-fixes"
                  },
                  {
                    "postcssPlugin": "postcss-preset-env",
                    "plugins": [
                      {
                        "postcssPlugin": "postcss-media-minmax",
                        "AtRule": {}
                      },
                      {
                        "postcssPlugin": "postcss-initial"
                      },
                      {
                        "postcssPlugin": "postcss-page-break"
                      },
                      {
                        "postcssPlugin": "postcss-font-variant"
                      },
                      {
                        "postcssPlugin": "postcss-gap-properties"
                      },
                      {
                        "postcssPlugin": "postcss-unset-value"
                      },
                      {
                        "postcssPlugin": "postcss-custom-properties"
                      },
                      {
                        "postcssPlugin": "postcss-progressive-custom-properties"
                      },
                      {
                        "options": {
                          "flexbox": "no-2009"
                        },
                        "postcssPlugin": "autoprefixer"
                      },
                      {
                        "postcssPlugin": "postcss-preset-env"
                      }
                    ]
                  },
                  {
                    "postcssPlugin": "postcss-reporter"
                  }
                ]
              }
            }
          }
        ]
      },
      {
        "test": {},
        "use": [
          "style-loader",
          {
            "loader": "css-loader",
            "options": {
              "sourceMap": true
            }
          },
          {
            "loader": "postcss-loader",
            "options": {
              "sourceMap": true,
              "postcssOptions": {
                "plugins": [
                  {
                    "postcssPlugin": "postcss-focus"
                  },
                  {
                    "postcssPlugin": "postcss-flexbugs-fixes"
                  },
                  {
                    "postcssPlugin": "postcss-preset-env",
                    "plugins": [
                      {
                        "postcssPlugin": "postcss-media-minmax",
                        "AtRule": {}
                      },
                      {
                        "postcssPlugin": "postcss-initial"
                      },
                      {
                        "postcssPlugin": "postcss-page-break"
                      },
                      {
                        "postcssPlugin": "postcss-font-variant"
                      },
                      {
                        "postcssPlugin": "postcss-gap-properties"
                      },
                      {
                        "postcssPlugin": "postcss-unset-value"
                      },
                      {
                        "postcssPlugin": "postcss-custom-properties"
                      },
                      {
                        "postcssPlugin": "postcss-progressive-custom-properties"
                      },
                      {
                        "options": {
                          "flexbox": "no-2009"
                        },
                        "postcssPlugin": "autoprefixer"
                      },
                      {
                        "postcssPlugin": "postcss-preset-env"
                      }
                    ]
                  },
                  {
                    "postcssPlugin": "postcss-reporter"
                  }
                ]
              }
            }
          },
          {
            "loader": "sass-loader",
            "options": {
              "sourceMap": true
            }
          }
        ]
      },
      {
        "test": {},
        "type": "asset/resource",
        "generator": {
          "filename": "fonts/[name].[ext]"
        }
      },
      {
        "test": {},
        "type": "asset/resource",
        "generator": {
          "filename": "images/[name].[ext]"
        }
      }
    ]
  }
}"
`;

exports[`webpack configs > sets up the production config with default settings 1`] = `
"{
  "context": "<PROJECT_ROOT>/project/app",
  "experiments": {},
  "infrastructureLogging": {
    "level": "warn"
  },
  "entry": {
    "index": [
      "<PROJECT_ROOT>/node_modules/react-app-polyfill/stable.js",
      "<PROJECT_ROOT>/node_modules/navigator.sendbeacon/dist/navigator.sendbeacon.cjs.js",
      "<PROJECT_ROOT>/project/app/index.js"
    ]
  },
  "output": {
    "path": "<PROJECT_ROOT>/build",
    "filename": "[name].js",
    "chunkFilename": "[name].chunk.js"
  },
  "devtool": "source-map",
  "resolve": {
    "modules": [
      "<PROJECT_ROOT>/project/app",
      "node_modules",
      "<PROJECT_ROOT>/node_modules",
      "<PROJECT_ROOT>/packages/workflow/node_modules"
    ],
    "symlinks": true,
    "extensions": [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
      ".json",
      ".css",
      ".scss"
    ],
    "fallback": {
      "path": "<PROJECT_ROOT>/node_modules/path-browserify/index.js"
    },
    "plugins": [
      {
        "source": "described-resolve",
        "target": "resolve",
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx"
        ],
        "referenceMatchMap": {},
        "log": {},
        "baseUrl": "./example/",
        "absoluteBaseUrl": "<PROJECT_ROOT>/example"
      }
    ]
  },
  "resolveLoader": {
    "modules": [
      "<PROJECT_ROOT>/node_modules",
      "<PROJECT_ROOT>/packages/workflow/node_modules"
    ],
    "symlinks": true
  },
  "plugins": [
    {
      "definitions": {
        "__DEV__": false,
        "__TEST__": true,
        "__PROD__": false,
        "__STAGING__": false,
        "process.env.NODE_ENV": "\\"test\\""
      }
    },
    {
      "options": {
        "banner": "APP_VERSION=\\"N/A\\";",
        "test": {},
        "raw": true,
        "entryOnly": true
      }
    },
    {
      "options": {
        "banner": "vN/A - 2023-03-28T16:07:07.909Z"
      }
    },
    {
      "userOptions": {
        "template": "../../packages/workflow/public/index.html",
        "favicon": "../../packages/workflow/public/favicon.ico",
        "title": "Availity"
      },
      "version": 5,
      "options": {
        "template": "../../packages/workflow/public/index.html",
        "templateContent": false,
        "filename": "index.html",
        "publicPath": "auto",
        "hash": false,
        "inject": "head",
        "scriptLoading": "defer",
        "compile": true,
        "favicon": "../../packages/workflow/public/favicon.ico",
        "minify": "auto",
        "cache": true,
        "showErrors": true,
        "chunks": "all",
        "excludeChunks": [],
        "chunksSortMode": "auto",
        "meta": {},
        "base": false,
        "title": "Availity",
        "xhtml": false
      }
    },
    {
      "options": {
        "resourceRegExp": {},
        "contextRegExp": {}
      }
    },
    {
      "options": {},
      "logger": {},
      "pathCache": {},
      "fsOperations": 0,
      "primed": false
    },
    {
      "_sortedModulesCache": {},
      "options": {
        "filename": "css/[name]-[contenthash:8].chunk.css",
        "ignoreOrder": false,
        "runtime": true,
        "chunkFilename": "css/[name]-[contenthash:8].chunk.css"
      },
      "runtimeOptions": {
        "linkType": "text/css"
      }
    }
  ],
  "mode": "production",
  "target": "browserslist: defaults",
  "optimization": {
    "splitChunks": {
      "cacheGroups": {
        "defaultVendors": {
          "test": {},
          "idHint": "defaultVendors",
          "chunks": "all",
          "priority": -10
        },
        "default": {
          "minChunks": 2,
          "priority": -20,
          "reuseExistingChunk": true
        },
        "react": {
          "test": {},
          "idHint": "vendors",
          "chunks": "all",
          "priority": 10
        },
        "lodash": {
          "test": {},
          "idHint": "vendors",
          "chunks": "all",
          "priority": 1
        },
        "moment": {
          "test": {},
          "idHint": "vendors",
          "chunks": "all",
          "priority": 2
        },
        "styles": {
          "idHint": "styles",
          "test": {},
          "chunks": "all",
          "enforce": true
        }
      }
    },
    "minimizer": [],
    "runtimeChunk": "single",
    "moduleIds": "deterministic"
  },
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "test": {},
            "use": [
              {
                "loader": "imports-loader",
                "options": {
                  "type": "commonjs",
                  "imports": [
                    "single process/browser process"
                  ]
                }
              }
            ]
          },
          {
            "test": {},
            "include": [
              "<PROJECT_ROOT>/project/app",
              {}
            ],
            "use": [
              {
                "loader": "esbuild-loader",
                "options": {
                  "loader": "tsx",
                  "target": "es2015"
                }
              }
            ]
          },
          {
            "test": {},
            "resolve": {
              "fullySpecified": false
            }
          },
          {
            "test": {},
            "use": [
              {
                "loader": "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
                "options": {
                  "publicPath": "auto"
                }
              },
              {
                "loader": "css-loader",
                "options": {
                  "sourceMap": true,
                  "importLoaders": 1
                }
              },
              {
                "loader": "postcss-loader",
                "options": {
                  "sourceMap": true,
                  "postcssOptions": {
                    "plugins": [
                      {
                        "postcssPlugin": "postcss-focus"
                      },
                      {
                        "postcssPlugin": "postcss-flexbugs-fixes"
                      },
                      {
                        "postcssPlugin": "postcss-preset-env",
                        "plugins": [
                          {
                            "postcssPlugin": "postcss-media-minmax",
                            "AtRule": {}
                          },
                          {
                            "postcssPlugin": "postcss-initial"
                          },
                          {
                            "postcssPlugin": "postcss-page-break"
                          },
                          {
                            "postcssPlugin": "postcss-font-variant"
                          },
                          {
                            "postcssPlugin": "postcss-gap-properties"
                          },
                          {
                            "postcssPlugin": "postcss-unset-value"
                          },
                          {
                            "postcssPlugin": "postcss-custom-properties"
                          },
                          {
                            "postcssPlugin": "postcss-progressive-custom-properties"
                          },
                          {
                            "options": {
                              "flexbox": "no-2009"
                            },
                            "postcssPlugin": "autoprefixer"
                          },
                          {
                            "postcssPlugin": "postcss-preset-env"
                          }
                        ]
                      },
                      {
                        "postcssPlugin": "postcss-reporter"
                      }
                    ]
                  }
                }
              }
            ]
          },
          {
            "test": {},
            "use": [
              {
                "loader": "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
                "options": {
                  "publicPath": "auto"
                }
              },
              "css-loader",
              {
                "loader": "postcss-loader",
                "options": {
                  "sourceMap": true,
                  "postcssOptions": {
                    "plugins": [
                      {
                        "postcssPlugin": "postcss-focus"
                      },
                      {
                        "postcssPlugin": "postcss-flexbugs-fixes"
                      },
                      {
                        "postcssPlugin": "postcss-preset-env",
                        "plugins": [
                          {
                            "postcssPlugin": "postcss-media-minmax",
                            "AtRule": {}
                          },
                          {
                            "postcssPlugin": "postcss-initial"
                          },
                          {
                            "postcssPlugin": "postcss-page-break"
                          },
                          {
                            "postcssPlugin": "postcss-font-variant"
                          },
                          {
                            "postcssPlugin": "postcss-gap-properties"
                          },
                          {
                            "postcssPlugin": "postcss-unset-value"
                          },
                          {
                            "postcssPlugin": "postcss-custom-properties"
                          },
                          {
                            "postcssPlugin": "postcss-progressive-custom-properties"
                          },
                          {
                            "options": {
                              "flexbox": "no-2009"
                            },
                            "postcssPlugin": "autoprefixer"
                          },
                          {
                            "postcssPlugin": "postcss-preset-env"
                          }
                        ]
                      },
                      {
                        "postcssPlugin": "postcss-reporter"
                      }
                    ]
                  }
                }
              },
              {
                "loader": "sass-loader",
                "options": {
                  "sourceMap": true
                }
              }
            ]
          },
          {
            "test": {},
            "type": "asset/resource",
            "generator": {
              "filename": "fonts/[name][ext]"
            }
          },
          {
            "test": {},
            "type": "asset/resource",
            "generator": {
              "filename": "images/[name].[ext]"
            }
          },
          {
            "type": "asset/resource",
            "exclude": [
              {},
              {},
              {}
            ],
            "generator": {
              "filename": "static/media/[contenthash:8][ext]"
            }
          }
        ]
      }
    ]
  }
}"
`;

exports[`webpack configs > sets up the profile config with default settings 1`] = `
"{
  "context": "<PROJECT_ROOT>/project/app",
  "experiments": {},
  "infrastructureLogging": {
    "level": "warn"
  },
  "entry": {
    "index": [
      "<PROJECT_ROOT>/node_modules/react-app-polyfill/stable.js",
      "<PROJECT_ROOT>/node_modules/navigator.sendbeacon/dist/navigator.sendbeacon.cjs.js",
      "<PROJECT_ROOT>/project/app/index.js"
    ]
  },
  "output": {
    "path": "<PROJECT_ROOT>/build",
    "filename": "[name].js",
    "chunkFilename": "[name].chunk.js"
  },
  "devtool": "source-map",
  "resolve": {
    "modules": [
      "<PROJECT_ROOT>/project/app",
      "node_modules",
      "<PROJECT_ROOT>/node_modules",
      "<PROJECT_ROOT>/packages/workflow/node_modules"
    ],
    "symlinks": true,
    "extensions": [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
      ".json",
      ".css",
      ".scss"
    ],
    "fallback": {
      "path": "<PROJECT_ROOT>/node_modules/path-browserify/index.js"
    },
    "plugins": [
      {
        "source": "described-resolve",
        "target": "resolve",
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx"
        ],
        "referenceMatchMap": {},
        "log": {},
        "baseUrl": "./example/",
        "absoluteBaseUrl": "<PROJECT_ROOT>/example"
      }
    ]
  },
  "resolveLoader": {
    "modules": [
      "<PROJECT_ROOT>/node_modules",
      "<PROJECT_ROOT>/packages/workflow/node_modules"
    ],
    "symlinks": true
  },
  "plugins": [
    {
      "definitions": {
        "__DEV__": false,
        "__TEST__": true,
        "__PROD__": false,
        "__STAGING__": false,
        "process.env.NODE_ENV": "\\"test\\""
      }
    },
    {
      "options": {
        "banner": "APP_VERSION=\\"N/A\\";",
        "test": {},
        "raw": true,
        "entryOnly": true
      }
    },
    {
      "options": {
        "banner": "vN/A - 2023-03-28T16:07:07.909Z"
      }
    },
    {
      "userOptions": {
        "template": "../../packages/workflow/public/index.html",
        "favicon": "../../packages/workflow/public/favicon.ico",
        "title": "Availity"
      },
      "version": 5,
      "options": {
        "template": "../../packages/workflow/public/index.html",
        "templateContent": false,
        "filename": "index.html",
        "publicPath": "auto",
        "hash": false,
        "inject": "head",
        "scriptLoading": "defer",
        "compile": true,
        "favicon": "../../packages/workflow/public/favicon.ico",
        "minify": "auto",
        "cache": true,
        "showErrors": true,
        "chunks": "all",
        "excludeChunks": [],
        "chunksSortMode": "auto",
        "meta": {},
        "base": false,
        "title": "Availity",
        "xhtml": false
      }
    },
    {
      "options": {
        "resourceRegExp": {},
        "contextRegExp": {}
      }
    },
    {
      "options": {},
      "logger": {},
      "pathCache": {},
      "fsOperations": 0,
      "primed": false
    },
    {
      "_sortedModulesCache": {},
      "options": {
        "filename": "css/[name]-[contenthash:8].chunk.css",
        "ignoreOrder": false,
        "runtime": true,
        "chunkFilename": "css/[name]-[contenthash:8].chunk.css"
      },
      "runtimeOptions": {
        "linkType": "text/css"
      }
    },
    {
      "opts": {
        "analyzerMode": "static",
        "analyzerHost": "127.0.0.1",
        "reportFilename": "profile.html",
        "defaultSizes": "parsed",
        "openAnalyzer": true,
        "generateStatsFile": false,
        "statsFilename": "stats.json",
        "statsOptions": null,
        "excludeAssets": null,
        "logLevel": "info",
        "startAnalyzer": true,
        "analyzerPort": 8888
      },
      "server": null,
      "logger": {
        "activeLevels": {}
      }
    },
    {
      "options": {
        "verbose": false,
        "showHelp": true,
        "emitError": false,
        "strict": true
      }
    }
  ],
  "mode": "production",
  "target": "browserslist: defaults",
  "optimization": {
    "splitChunks": {
      "cacheGroups": {
        "defaultVendors": {
          "test": {},
          "idHint": "defaultVendors",
          "chunks": "all",
          "priority": -10
        },
        "default": {
          "minChunks": 2,
          "priority": -20,
          "reuseExistingChunk": true
        },
        "react": {
          "test": {},
          "idHint": "vendors",
          "chunks": "all",
          "priority": 10
        },
        "lodash": {
          "test": {},
          "idHint": "vendors",
          "chunks": "all",
          "priority": 1
        },
        "moment": {
          "test": {},
          "idHint": "vendors",
          "chunks": "all",
          "priority": 2
        },
        "styles": {
          "idHint": "styles",
          "test": {},
          "chunks": "all",
          "enforce": true
        }
      }
    },
    "minimizer": [],
    "runtimeChunk": "single",
    "moduleIds": "deterministic"
  },
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "test": {},
            "use": [
              {
                "loader": "imports-loader",
                "options": {
                  "type": "commonjs",
                  "imports": [
                    "single process/browser process"
                  ]
                }
              }
            ]
          },
          {
            "test": {},
            "include": [
              "<PROJECT_ROOT>/project/app",
              {}
            ],
            "use": [
              {
                "loader": "esbuild-loader",
                "options": {
                  "loader": "tsx",
                  "target": "es2015"
                }
              }
            ]
          },
          {
            "test": {},
            "resolve": {
              "fullySpecified": false
            }
          },
          {
            "test": {},
            "use": [
              {
                "loader": "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
                "options": {
                  "publicPath": "auto"
                }
              },
              {
                "loader": "css-loader",
                "options": {
                  "sourceMap": true,
                  "importLoaders": 1
                }
              },
              {
                "loader": "postcss-loader",
                "options": {
                  "sourceMap": true,
                  "postcssOptions": {
                    "plugins": [
                      {
                        "postcssPlugin": "postcss-focus"
                      },
                      {
                        "postcssPlugin": "postcss-flexbugs-fixes"
                      },
                      {
                        "postcssPlugin": "postcss-preset-env",
                        "plugins": [
                          {
                            "postcssPlugin": "postcss-media-minmax",
                            "AtRule": {}
                          },
                          {
                            "postcssPlugin": "postcss-initial"
                          },
                          {
                            "postcssPlugin": "postcss-page-break"
                          },
                          {
                            "postcssPlugin": "postcss-font-variant"
                          },
                          {
                            "postcssPlugin": "postcss-gap-properties"
                          },
                          {
                            "postcssPlugin": "postcss-unset-value"
                          },
                          {
                            "postcssPlugin": "postcss-custom-properties"
                          },
                          {
                            "postcssPlugin": "postcss-progressive-custom-properties"
                          },
                          {
                            "options": {
                              "flexbox": "no-2009"
                            },
                            "postcssPlugin": "autoprefixer"
                          },
                          {
                            "postcssPlugin": "postcss-preset-env"
                          }
                        ]
                      },
                      {
                        "postcssPlugin": "postcss-reporter"
                      }
                    ]
                  }
                }
              }
            ]
          },
          {
            "test": {},
            "use": [
              {
                "loader": "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
                "options": {
                  "publicPath": "auto"
                }
              },
              "css-loader",
              {
                "loader": "postcss-loader",
                "options": {
                  "sourceMap": true,
                  "postcssOptions": {
                    "plugins": [
                      {
                        "postcssPlugin": "postcss-focus"
                      },
                      {
                        "postcssPlugin": "postcss-flexbugs-fixes"
                      },
                      {
                        "postcssPlugin": "postcss-preset-env",
                        "plugins": [
                          {
                            "postcssPlugin": "postcss-media-minmax",
                            "AtRule": {}
                          },
                          {
                            "postcssPlugin": "postcss-initial"
                          },
                          {
                            "postcssPlugin": "postcss-page-break"
                          },
                          {
                            "postcssPlugin": "postcss-font-variant"
                          },
                          {
                            "postcssPlugin": "postcss-gap-properties"
                          },
                          {
                            "postcssPlugin": "postcss-unset-value"
                          },
                          {
                            "postcssPlugin": "postcss-custom-properties"
                          },
                          {
                            "postcssPlugin": "postcss-progressive-custom-properties"
                          },
                          {
                            "options": {
                              "flexbox": "no-2009"
                            },
                            "postcssPlugin": "autoprefixer"
                          },
                          {
                            "postcssPlugin": "postcss-preset-env"
                          }
                        ]
                      },
                      {
                        "postcssPlugin": "postcss-reporter"
                      }
                    ]
                  }
                }
              },
              {
                "loader": "sass-loader",
                "options": {
                  "sourceMap": true
                }
              }
            ]
          },
          {
            "test": {},
            "type": "asset/resource",
            "generator": {
              "filename": "fonts/[name][ext]"
            }
          },
          {
            "test": {},
            "type": "asset/resource",
            "generator": {
              "filename": "images/[name].[ext]"
            }
          },
          {
            "type": "asset/resource",
            "exclude": [
              {},
              {},
              {}
            ],
            "generator": {
              "filename": "static/media/[contenthash:8][ext]"
            }
          }
        ]
      }
    ]
  }
}"
`;
